--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 IoTests is a benchmark testing suite for Java IO.
 
 How to run
@@ -20,9 +19,10 @@ My results
 
 	java -Xmx2048m -cp target/classes:target/test-classes test.performance.BenchmarkTest [SINGLE|MULTI|NIO]
 
-- Results for src/main/resources/test-file-5M.txt (5 million lines) -
+- Results for text file of 5 million lines-
 
-		# Lines -->	-	2M	1.5M	1M	500K	100K	10K
+	# Lines per worker -->	-	2M	1.5M	1M	500K	100K	10K
+	Mode
 	SINGLE			39.6	x	x	x	x	x	x
 	NIO (8192 buffer)	36.7	x	x	x	x	x	x
 	MULTI			x	112.8	105	81.6	71.3	41.5	32.7
